--- a/.github/workflows/objective.yml
+++ b/.github/workflows/objective.yml
@@ -1,15 +1,15 @@
-name: deploy-marketing
+name: deploy-objective
 
 on:
   push:
     branches: 
       - master
     paths:
-      - 'marketing/**'
+      - 'objective/**'
 
 defaults:
   run:
-    working-directory: 'marketing'
+    working-directory: 'objective'
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
       - run: npm run build
 
       - uses: shinyinc/action-aws-cli@v1.2
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/marketing/latest
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/objective/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
