--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -21,6 +21,8 @@ jobs:
       - run: npm run build
         env:
           PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
+        run: |
+          echo $PRODUCTION_DOMAIN >> secrets.txt
 
       - uses: shinyinc/action-aws-cli@v1.2
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
