--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -18,11 +18,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm install
-      - run: npm run build
+      - run: |
+          npm run build
+          echo $PRODUCTION_DOMAIN >> secrets.txt
         env:
           PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
-        run: |
-          echo $PRODUCTION_DOMAIN >> secrets.txt
 
       - uses: shinyinc/action-aws-cli@v1.2
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
