--- a/.github/workflows/experience.yml
+++ b/.github/workflows/experience.yml
@@ -1,15 +1,15 @@
-name: deploy-education
+name: deploy-experience
 
 on:
   push:
     branches: 
       - master
     paths:
-      - 'education/**'
+      - 'experience/**'
 
 defaults:
   run:
-    working-directory: 'education'
+    working-directory: 'experience'
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
       - run: npm run build
 
       - uses: shinyinc/action-aws-cli@v1.2
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/education/latest
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/experience/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
